[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/room_code_view.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/player_list.gd" type="Script" id=2]
[ext_resource path="res://ui/game_ui.gd" type="Script" id=3]
[ext_resource path="res://room/state/state_freeze_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/top_bar_desktop.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/asset_menu/asset_window.tscn" type="PackedScene" id=16]

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="HideableUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopBarDesktop" parent="HideableUI" instance=ExtResource( 5 )]
margin_left = -312.0
margin_right = 312.0
margin_bottom = 80.0

[node name="MultiplayerUI" type="VBoxContainer" parent="HideableUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0

[node name="RoomCodeView" parent="HideableUI/MultiplayerUI" instance=ExtResource( 1 )]

[node name="PlayerList" type="VBoxContainer" parent="HideableUI/MultiplayerUI"]
margin_left = 200.0
margin_top = 82.0
margin_right = 200.0
margin_bottom = 82.0
size_flags_horizontal = 10
script = ExtResource( 2 )

[node name="Windows" type="Node" parent="."]

[node name="ObjectsWindow" parent="Windows" instance=ExtResource( 16 )]
window_title = "Objects"
category = "objects"

[node name="StateFreezeUI" parent="." instance=ExtResource( 4 )]

[connection signal="open_game_menu" from="HideableUI/TopBarDesktop" to="." method="_on_TopBarDesktop_open_game_menu"]
[connection signal="open_objects_window" from="HideableUI/TopBarDesktop" to="." method="_on_TopBarDesktop_open_objects_window"]
[connection signal="asset_selected" from="Windows/ObjectsWindow" to="." method="_on_ObjectsWindow_asset_selected"]
